fix php config path

--- a/mydocker/php-fpm/Dockerfile
+++ b/mydocker/php-fpm/Dockerfile
@@ -1,8 +1,8 @@
 FROM php:7.4-fpm
 
 # Overide PHP config
-COPY ./www.conf /usr/local/etc/php-fpm.d/www.conf
-ADD ./php.ini /usr/local/etc/php/php.ini
+COPY ./mydocker/php-fpm/www.conf /usr/local/etc/php-fpm.d/www.conf
+COPY ./mydocker/php-fpm/php.ini /usr/local/etc/php/php.ini
 
 # Install swoole selected extensions
 ARG DEBIAN_FRONTEND=noninteractive
