add laravel 8 & update env laravel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,17 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./src:/var/www/html
-      - ./mydocker/nginx/conf/nginx.conf:/etc/nginx/conf/nginx.conf:ro
-      - ./mydocker/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./mydocker/nginx/conf/nginx.conf:/etc/nginx/conf/nginx.conf
+      - ./mydocker/nginx/conf.d:/etc/nginx/conf.d
     ports:
       - "80:80"
 
-  php:
+  fpm:
     image: jhonoryza/php:ubuntu-7.4-swoole
     working_dir: /var/www/html
+    #user: "1001"
     volumes:
       - ./src:/var/www/html
     ports:
       - "1215:1215" # Swoole port
-      # - "9000:9000" # PHP-FPM port
-    # When the container starts up, it will run Swoole immediately.
-    # command: bash -c "php artisan swoole:http start" # Uncomment this if your use Swoole.
+    command: bash -c "php artisan swoole:http start" # Uncomment this if your use Swoole.
