--- a/mydocker/nginx/conf.d/default.conf
+++ b/mydocker/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 # Swoole configuration
 upstream swoole-http {
-    server php-fpm:1215;
+    server fpm:1215;
 }
 map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -69,6 +69,6 @@ server {
         # IF https
         # proxy_set_header HTTPS "on";
 
-        proxy_pass http://swoole-http$suffix;
+        proxy_pass http://swoole-http?$query_string;
     }
 }
